<resources>
    <string name="app_name">MobileLogin</string>
    <string name="signin_mobile_no">Login With Mobile No.</string>
    <string name="signup_first">We will send one time password (OTP)  message to verify your mobile number.</string>
    <string name="country_code">Country Code</string>
    <string name="phone_no">Phone Number</string>
    <string name="terms_condition">I accept all <u>Terms and Conditions</u> of this application.</string>
    <string name="signin_next">Next</string>
    <string name="mobile_no_error">Please enter a valid 10 digit number</string>
    <string name="accept_terms_condition">Please accept the Terms and Conditions</string>
    <string name="signup_second">Please enter the one time password you have received on your mobile number.</string>
    <string name="code">Code</string>
    <string name="done">Done</string>
    <string name="signup_otp_resend_mobile">If you have not received any OTP click below to resend.</string>
    <string name="resend_otp_mobile">Resend OTP</string>
    <string name="alert">Alert</string>
    <string name="otp_confirm">Are you sure you want to resend OTP ?</string>
</resources>
